# Akerbeltz

./: .gitignore  CMakeLists.txt  README.md  TODO  main.cpp
scripts/: Nand.txt  ab_ltc.sh  compareMovements.py  confirm_ltc.sh  engines.tsv  perft_suite.py  smoke_ab_stc.sh  smoke_test_ab.sh  sprt.sh  sprt_ci.sh  sprt_stc.sh  test.txt
scripts/utils/: perftsuite.epd
src/: CMakeLists.txt  attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  bitboards.cpp  bitboards.h  engine_info.h.in  evaluate.cpp  evaluate.h  main.cpp  move.h  movegen.cpp  movegen.h  position.cpp  position.h  pvtable.cpp  pvtable.h  search.cpp  search.h  timemanagement.h  timemanager.cpp  timemanager.h  ttable.cpp  ttable.h  types.h  typesTutorial.h  uci.cpp  uci.h
test/: CMakeLists.txt  attacksTest.cpp  bitboardTest.cpp  bitboardsTest.cpp  bitboards_attacks_test.cpp  evaluateTest.cpp  evaluate_test.cpp  moveTest.cpp  movegenTest.cpp  movegen_perft_test.cpp  perftTest.cpp  perftsuite.epd  positionTest.cpp  position_state_test.cpp  pvtableTest.cpp  searchTest.cpp  search_test.cpp  timemanager_test.cpp  ttable_test.cpp  typesTest.cpp  types_move_encoding_test.cpp  uciTest.cpp  uci_integration_test.cpp
test/helpers/: test_helpers.h
