cmake_minimum_required(VERSION 3.20)

project(Xake VERSION 1.0.0 LANGUAGES CXX)

set(XAKE_ENGINE_VERSION "${PROJECT_VERSION}" CACHE STRING "Engine version string")
set(XAKE_ENGINE_AUTHOR "Julen Aristondo")

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE RelWithDebInfo)  # mejor para depurar que Release puro
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR})

find_package(Threads REQUIRED)

option(XAKE_BUILD_TESTS "Build unit tests" OFF)

add_subdirectory(src)

if(XAKE_BUILD_TESTS)
  enable_testing()
  add_subdirectory(test)
endif()
